--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<p>Ceci est un paragraphe</p>
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+	<meta charset="UTF-8">
+	<!-- attention ceci n'est pas valable dans stackblitz (voir le fichier js pour l'import) -->
+	<link rel="stylesheet" href="style.css">
+	<title>Test cours</title>
+</head>
+
+<body>
+	<p style="color: blue">Le texte de mon premier paragraphe</p>
+</body>
+
+</html>
