--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 
 <head>
 	<meta charset="UTF-8">
-	<!-- attention ceci n'est pas valable dans stackblitz (voir le fichier js pour l'import) -->
-	<link rel="stylesheet" href="style.css">
-	<title>Test cours</title>
+	<title>Titre de la page</title>
 </head>
 
 <body>
-	<p style="color: blue">Le texte de mon premier paragraphe</p>
+	<p>Le texte de mon premier paragraphe</p>
 </body>
 
 </html>
